DevTools: clear layers using transparent color

The default layer backing is transparent.  Clearing with anything else
can interfere with compositing later.

Use transparent color instead of opaque white when clearing layers for
partial playback.

R=caseq@chromium.org,jbroman@chromium.org
BUG=607720

Review-Url: https://codereview.chromium.org/2044643006
Cr-Commit-Position: refs/heads/master@{#399106}

Former-commit-id: cdb916fa992641446848743640537454be31a56a